# Organisation-Api

./: README.md  main.py  mixins.py  organisation.db  pyproject.toml
db/: db_setup.py  domains.py
db/models/: schemas.py  sql_models.py
repositories/: address.py  organisation.py  socials.py
services/: organisation.py
