[tool.poetry]
name = "organisation-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "organisation_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
sqlalchemy = "^1.4.42"
sqlalchemy-utils = "^0.38.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
